--- a/Game of Life/Form1.resx
+++ b/Game of Life/Form1.resx
@@ -216,4 +216,7 @@
   <metadata name="panelContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>15, 48</value>
   </metadata>
+  <metadata name="hudStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>196, 48</value>
+  </metadata>
 </root>
